overflow fixed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -26,7 +26,7 @@
       position: absolute;
       bottom: 1rem;
       left: 1rem;
-      width: 100%;
+      width: calc(100% - 2rem);
       gap: 1.5rem;
       display: flex;
       justify-content: center;
